trying to fix iphone background color

--- a/style.css
+++ b/style.css
@@ -41,12 +41,15 @@
   }
 }
 
+html, body {
+  background-color: var(--green100);
+  background: linear-gradient(to bottom, rgb(14, 160, 165), rgb(9, 100, 104));
+}
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: var(--ff-primary);
-  background-color: var(--green100);
-  background: linear-gradient(to bottom, rgb(14, 160, 165), rgb(9, 100, 104));
   color: var(--tan100);
 }
 
@@ -93,6 +96,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .new-round__container p {
   text-align: center;
+  width: 90%;
 }
 
 /* table style */
