--- a/style.css
+++ b/style.css
@@ -41,14 +41,16 @@
   }
 }
 
+html, body {
+  background-color: rgb(9, 100, 104);
+}
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: var(--ff-primary);
-  background-color: var(--green100);
   background: linear-gradient(to bottom, rgb(14, 160, 165), rgb(9, 100, 104));
   color: var(--tan100);
-  overflow: hidden;
 }
 
 img, picture, video, canvas, svg {
@@ -88,8 +90,11 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 3rem 0 0;
   gap: 1rem;
+}
+
+.new-round__hero-img {
+  margin-block-start: 3rem;
 }
 
 .new-round__container p {
