score tracker and scorecard is working good, tracking score, adding total

--- a/style.css
+++ b/style.css
@@ -491,13 +491,23 @@ h1, h2, h3, h4, h5, h6 {
   width: 90%;
   top: 7rem;
   padding: 0;
-  overflow: auto;
+}
 
+.in-game__scorecard-not-total {
+  width: 80%;
+}
+
+.in-game__scorecard-not-total, .in-game__scorecard-container, .in-game__scorecard-name-player {
+  overflow: auto;
+}
+.in-game__scorecard-name-player {
+  height: 100%;
 }
 
 .in-game__scorecard-row-target, 
 .in-game__scorecard-row-distance, 
-.in-game__scorecard-row-player {
+.in-game__scorecard-row-player,
+.in-game__scorecard-number-total {
   display: flex;
   min-width: 100%;
   width: max-content;
@@ -506,15 +516,26 @@ h1, h2, h3, h4, h5, h6 {
   padding-block: 0.5rem
 }
 .in-game__scorecard-row-player, .in-game__scorecard-number-total {
-  padding-block: 1rem;
+  height: 3rem;
+  align-items: center;
 }
-.in-game__scorecard-container .row:nth-last-of-type(2n + 1) {
+.in-game__scorecard-row-target {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.in-game__scorecard-player-container div:nth-child(odd) {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
 .in-game__scorecard-name-target, .in-game__scorecard-name-distance, .in-game__scorecard-name-player {
   padding-inline: 0.5rem;
   width: 4.9rem;
+}
+
+.in-game__scorecard-name-player, .in-game__scorecard-number-total {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .in-game__scorecard-number-target, .in-game__scorecard-number-distance, .in-game__scorecard-number-player {
@@ -529,13 +550,13 @@ h1, h2, h3, h4, h5, h6 {
 .in-game__scorecard-number-distance,
 .in-game__scorecard-number-player {
   flex: none; 
-
 }
 
 .in-game__scorecard-total {
   position: absolute;
   top: 0;
   right: 0;
+  width: 20%;
   background-color: rgb(77, 77, 77);
   color: white;
   z-index: 100;
