--- a/style.css
+++ b/style.css
@@ -331,9 +331,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .in-game__target-score-container {
   width: 90%;
-  margin: 2rem auto;
+  margin: 3rem auto;
   border-radius: 0.5rem;
-  
+  max-height: 23.5rem;
 }
 
 .in-game__score-setter,
@@ -341,6 +341,14 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.in-game__score-setter {
+  overflow: auto;
+}
+.in-game__score-setter::-webkit-scrollbar {
+  display: none;
+  width: 0;
 }
 
 .in-game__target-score-row.caption {
@@ -364,7 +372,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .in-game__target-score-row {
   display: grid;
-  grid-template-columns: 1fr 3fr 3fr;
+  grid-template-columns: 1fr 3fr 5fr;
   align-items: center;
   text-align: center;
   padding-block: 0.5rem;
@@ -383,7 +391,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .in-game__target-score-buttons {
   display: flex;
+  /* gap: 0.5rem; */
+  align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .in-game__target-score {
@@ -488,13 +499,13 @@ h1, h2, h3, h4, h5, h6 {
 /* scorecard display */
 
 .in-game__scorecard-container {
-  width: 90%;
+  width: 95%;
   top: 7rem;
   padding: 0;
 }
 
 .in-game__scorecard-not-total {
-  width: 80%;
+  width: 70%;
 }
 
 .in-game__scorecard-not-total, .in-game__scorecard-container, .in-game__scorecard-name-player {
@@ -515,7 +526,7 @@ h1, h2, h3, h4, h5, h6 {
 .in-game__scorecard-row-target, .in-game__scorecard-row-distance {
   padding-block: 0.5rem
 }
-.in-game__scorecard-row-player, .in-game__scorecard-number-total {
+.in-game__scorecard-row-player, .in-game__scorecard-number-total, .in-game__scorecard-multiplied-total {
   height: 3rem;
   align-items: center;
 }
@@ -531,7 +542,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 4.9rem;
 }
 
-.in-game__scorecard-name-player, .in-game__scorecard-number-total {
+.in-game__scorecard-name-player, .in-game__scorecard-number-total, .in-game__scorecard-multiplied-total {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -556,16 +567,74 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 0;
   right: 0;
-  width: 20%;
+  width: 30%;
   background-color: rgb(77, 77, 77);
   color: white;
   z-index: 100;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.in-game__scorecard-name-total {
-  padding: 1.75rem 1rem;
+.in-game__scorecard-name-total, .in-game__scorecard-multiplier-name {
+  padding-block: 1.75rem;
+}
+
+.in-game__scorecard-multiplied-container, .in-game__scorecard-net-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .in-game__scorecard-number-total {
   text-align: center;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 5rem;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  border-radius: 5rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--green500);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
