--- a/style.css
+++ b/style.css
@@ -180,6 +180,71 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--green500)
 }
 
+/* mode switch */
+
+.new-round__mode-change-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+
+}
+
+.switch-container {
+  display: flex;
+  justify-content: right;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 5rem;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  border-radius: 5rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--green500);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
 /* start round button */
 
 .new-round__start-round {
@@ -309,6 +374,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  position: relative;
 }
 
 .in-game__yardage-label {
@@ -332,6 +398,26 @@ h1, h2, h3, h4, h5, h6 {
   top: 0.2rem;
   color: black;
   
+}
+
+.in-game__yardage-error {
+  display: none;
+  position: absolute;
+  top: 3rem;
+  right: 1rem;
+  background-color: white;
+  width: 15rem;
+  padding: 0.5rem;
+  text-align: center;
+}
+.in-game__yardage-error:before {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  right: 4rem;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent white transparent;
 }
 
 /* score inputs */
@@ -594,54 +680,4 @@ h1, h2, h3, h4, h5, h6 {
 
 .in-game__scorecard-number-total {
   text-align: center;
-}
-
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 5rem;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  border-radius: 5rem;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: var(--green500);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
 }
