--- a/style.css
+++ b/style.css
@@ -737,6 +737,7 @@ input:checked + .slider:before {
   grid-template-columns: repeat(3, 1fr);
   width: 80%;
   align-items: end;
+
 }
 
 /* podium */
@@ -749,12 +750,15 @@ input:checked + .slider:before {
     background-color: rgba(247, 237, 227, 0.614);
     color: black;
 }
+
+.round-summary__podium-stand {
+    width: 100%;
+    background-color: rgba(79, 79, 79, 0.443); 
+}
+
 .round-summary__podium-name {
-  width: 100%;
-  height: 0;
-  border-bottom: 2rem solid rgb(85, 85, 85, 0.4); 
   font-size: 2rem;
-  padding-bottom: 1.5rem
+  line-height: 1;
 }
 
 .round-summary__podium#podium-1 .round-summary__podium-step {
@@ -763,27 +767,27 @@ input:checked + .slider:before {
   border-left: 1px solid black;
   border-right: 1px solid black;
 }
-.round-summary__podium#podium-1 .round-summary__podium-name {
-  border-left: 0.5rem solid transparent; 
-  border-right: 0.5rem solid transparent;
+.round-summary__podium#podium-1 .round-summary__podium-stand {
+  clip-path: polygon(10% 0%, 90% 0%, 100% 100%, 0% 100%);
+  height: 1.5rem;
 }
 
 .round-summary__podium#podium-2 .round-summary__podium-step {
   height: 3.8rem;
   font-size: 1.5rem;
 }
-.round-summary__podium#podium-2 .round-summary__podium-name {
-  border-left: 1rem solid transparent; 
-  padding-right: 1rem;
+.round-summary__podium#podium-2 .round-summary__podium-stand {
+  clip-path: polygon(15% 0%, 100% -2%, 100% 100%, 0% 100%);
+  height: 1.8rem;
 }
 
 .round-summary__podium#podium-3 .round-summary__podium-step {
   height: 2.5rem;
   font-size: 1rem;
 }
-.round-summary__podium#podium-3 .round-summary__podium-name {
-  border-right: 1rem solid transparent; 
-  padding-left: 1rem;
+.round-summary__podium#podium-3 .round-summary__podium-stand {
+   clip-path: polygon(0% -2%, 85% 0%, 100% 100%, 0% 100%);
+   height: 2rem;
 }
 
 /* table */
