--- a/style.css
+++ b/style.css
@@ -7,23 +7,23 @@
     --blue800: rgb(0, 49, 68);
     --orange500: #ff9654;
 
-    --ff-primary: 'Winky Sans', Helvetica, Arial, sans-serif
+    --ff-primary: 'Playfair Display', Helvetica, Arial, sans-serif
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Winky Sans';
+  font-family: 'Playfair Display';
   font-style: normal;
   font-weight: 400;
-  src: url('./design/winky-sans-v3-latin/winky-sans-v3-latin-regular.woff2') format('woff2');
+  src: url('./design/winky-sans-v3-latin/playfair-display-v40-latin/playfair-display-v40-latin-regular.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Winky Sans';
+  font-family: 'Playfair Display';
   font-style: normal;
   font-weight: 700;
-  src: url('./design/winky-sans-v3-latin/winky-sans-v3-latin-700.woff2') format('woff2');
+  src: url('./design/winky-sans-v3-latin/playfair-display-v40-latin/playfair-display-v40-latin-700.woff2') format('woff2');
 }
 
 /* reset */
@@ -51,6 +51,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: var(--ff-primary);
+  font-weight: 700;
   background: linear-gradient(to bottom, rgb(14, 160, 165), rgb(9, 100, 104));
   color: var(--tan100);
 }
@@ -95,13 +96,20 @@ h1, h2, h3, h4, h5, h6 {
   gap: 1rem;
 }
 
-.new-round__hero-img {
-  margin-block-start: 3rem;
+.new-round__img {
+  margin-block-start: 1rem;
+  font-size: 6rem;
+}
+
+.new-round-header {
+  font-size: 2.2rem;
+  transform: scaleY(1.5);
 }
 
 .new-round__container p {
-  text-align: center;
-  width: 90%;
+  width: 75%;
+  display: flex;
+  justify-content: space-around;
 }
 
 /* table style */
@@ -578,7 +586,7 @@ input:checked + .slider:before {
   left: 50%;
   bottom: 3rem;
   transform: translateX(-50%);
-  display: none;
+  display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 80%;
