--- a/style.css
+++ b/style.css
@@ -68,10 +68,10 @@
 
 html, body {
   background: var(--color-neautral-dark);
-  background: linear-gradient(180deg,rgba(87, 115, 68, 1) 0%, rgba(47, 69, 33, 1) 14%, rgba(37, 57, 24, 1) 31%, rgba(29, 47, 16, 1) 48%, rgba(19, 36, 7, 1) 100%);
 }
 
 body {
+  background: linear-gradient(180deg,rgba(87, 115, 68, 1) 0%, rgba(47, 69, 33, 1) 14%, rgba(37, 57, 24, 1) 31%, rgba(29, 47, 16, 1) 48%, rgba(19, 36, 7, 1) 100%);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: var(--ff-primary);
@@ -116,6 +116,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .new-round__img {
@@ -209,11 +210,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .new-round__table-row:nth-last-of-type(2n) {
-  background-color: #9c4512;
+  background-color: #c65a1e;
 
 }
 .new-round__table-row:nth-last-of-type(2n + 1) {
-  background-color: #9c451298;
+  background-color: #a94d19
 
 }
 
@@ -339,6 +340,7 @@ input:checked + .slider:before {
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
 }
 
 /* target selection */
@@ -352,14 +354,9 @@ input:checked + .slider:before {
   overflow: hidden;
   height: 5.5rem;
   transition: height 0.5s ease-in-out;
-  background-color: var(--blue600);
-  box-shadow: 0 0.5rem 2rem 0.1rem var(--blue800);
-}
-
-.highlighter {
-  width: 90%;
-  height: 0;
-  box-shadow: 0 1rem 5rem 0.5rem var(--orange500);
+  background-color: var(--color-neutral-light);
+  box-shadow: 0 0.5rem 2rem 0.2rem rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
 .in-game__target-container.open {
@@ -370,7 +367,6 @@ input:checked + .slider:before {
   display: flex;
   align-items: center;
   gap: 1rem;
-
 }
 
 .in-game__target-expand-button {
@@ -389,7 +385,9 @@ input:checked + .slider:before {
   display: none;
   align-items: center;
   gap: 3rem;
-  width: 90%;
+  padding-inline: 1rem;
+  width: 100%;
+  border-top: 1px solid black;
   overflow-y: hidden;
   overflow-x: auto;
   background-color: transparent;
@@ -400,12 +398,12 @@ input:checked + .slider:before {
 }
 
 .in-game__target-select {
-  color: rgba(255, 255, 255, 0.25)
+  color: #13240790;
 }
 
 .in-game__target-select.selected {
   font-size: 4rem;
-  color: rgba(255, 255, 255, 0.9);
+  color: var(--color-neautral-dark)
   
 }
 
@@ -432,14 +430,14 @@ input:checked + .slider:before {
   padding-inline-end: 3.2rem;
   width: 6.5rem;
   vertical-align: bottom;
+  border: 1px solid transparent;
+  box-shadow: 0 0.3rem 1rem 0 rgba(0, 0, 0, 0.5);
 }
 
 .in-game__yardage-input label { 
   position: absolute;
   left: 3.5rem;
   top: 0.2rem;
-  color: black;
-  
 }
 
 .in-game__yardage-error {
@@ -487,20 +485,18 @@ input:checked + .slider:before {
 }
 
 .in-game__target-score-row.caption {
-  background-color: var(--blue600);
-  background: linear-gradient(to bottom, rgb(1, 87, 121), rgb(0, 59, 83));
+  background-color: var(--color-neutral-light);
   border-radius: 0.5rem 0.5rem 0 0;
 
 }
 .in-game__target-score-row.closer {
-  background-color: var(--blue600);
-  background: linear-gradient(to top, rgb(1, 87, 121), rgb(0, 59, 83));
+  background-color: var(--color-neutral-light);
   border-radius: 0 0 0.5rem 0.5rem;
   height: 1.5rem;
 }
 
 .in-game__target-score-row:not(.caption, .closer) {
-  border: 1px solid var(--blue600);
+  border: 2px solid #a94d19;
   border-radius: 0.5rem;
 
 }
@@ -535,30 +531,34 @@ input:checked + .slider:before {
 .in-game__target-score {
   width: 2rem;
   border-radius: 5rem;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.306);
+  background-color: #0b1603;
+  border: 2px solid transparent
 }
 
 .in-game__target-score.selected[value="10"] {
-  background-color: var(--green500);
-  background-image: linear-gradient(to bottom, rgb(225, 243, 225), rgb(98, 191, 100) 30%);
-  border: 1px solid var(--green500);
-  color: white;
+  background-color: rgba(98, 191, 100, 0.3);
+  border: 2px solid var(--color-primary);
+  color: var(--color-neutral-light);
 }
 .in-game__target-score.selected[value="8"] {
-  background-color: rgb(255, 225, 105);
-  background-image: linear-gradient(to bottom, rgb(255, 241, 185), rgb(255, 225, 105) 30%);
-  border: 1px solid rgb(255, 225, 105);
+  background-color: rgba(255, 225, 105, 0.3);
+  border: 2px solid rgb(255, 225, 105);
+  color: var(--color-neutral-light);
 }
 .in-game__target-score.selected[value="5"] {
-  background-color: rgb(219, 0, 0);
-  background-image: linear-gradient(to bottom, rgb(212, 156, 156), rgb(184, 19, 19) 30%);
-  border: 1px solid rgb(184, 19, 19);
-  color: white;
+  background-color: rgba(18, 64, 181, 0.4);
+  border: 2px solid rgb(18, 64, 181);
+  
+  color: var(--color-neutral-light);
+}
+.in-game__target-score.selected[value="3"] {
+  background-color: rgb(219, 0, 0, 0.3);
+  border: 2px solid rgb(184, 19, 19);
+  color: var(--color-neutral-light);
 }
 .in-game__target-score.selected[value="0"] {
-  background-color: white;
-  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 2px solid white;
   color: black;
 }
 
@@ -572,7 +572,10 @@ input:checked + .slider:before {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr 1fr;
   border-radius: 0.5rem 0.5rem 0 0;
+  border: 3px solid var(--color-primary);
+  border-bottom: none;
   background-color: rgb(148, 155, 164);
+  z-index: 15
 }
 
 .in-game__previous-target, .in-game__next-target, .in-game__scorecard-toggle {
@@ -623,7 +626,7 @@ input:checked + .slider:before {
   left: 50%;
   bottom: 3rem;
   transform: translateX(-50%);
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 1rem;
   width: 80%;
@@ -631,7 +634,7 @@ input:checked + .slider:before {
   text-align: center;
   background-color: white;
   color: black;
-  z-index: 10;
+  z-index: 20;
 }
 
 .in-game__confirm-end-buttons {
@@ -668,8 +671,10 @@ input:checked + .slider:before {
 
 .in-game__scorecard-container {
   width: 95%;
-  top: 7rem;
+  top: 40%;
+  transform: translateY(-50%);
   padding: 0;
+  z-index: 12;
 }
 
 .in-game__scorecard-not-total {
@@ -706,29 +711,18 @@ input:checked + .slider:before {
 }
 
 .in-game__scorecard-name-target, .in-game__scorecard-name-distance, .in-game__scorecard-name-player {
-  padding-inline: 0.5rem;
-  width: 4.9rem;
+  width: 5rem;
 }
 
-.in-game__scorecard-name-player, .in-game__scorecard-number-total, .in-game__scorecard-multiplied-total {
+.in-game__scorecard-name-player, .in-game__scorecard-number-total, .in-game__scorecard-multiplied-total,.in-game__scorecard-name-target, .in-game__scorecard-name-distance {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
 }
 
 .in-game__scorecard-number-target, .in-game__scorecard-number-distance, .in-game__scorecard-number-player {
   text-align: center;
   width: 3.8rem;
-}
-
-.in-game__scorecard-name-target,
-.in-game__scorecard-name-distance,
-.in-game__scorecard-name-player,
-.in-game__scorecard-number-target,
-.in-game__scorecard-number-distance,
-.in-game__scorecard-number-player {
-  flex: none; 
 }
 
 .in-game__scorecard-total {
@@ -738,13 +732,18 @@ input:checked + .slider:before {
   width: 30%;
   background-color: rgb(77, 77, 77);
   color: white;
-  z-index: 100;
+  z-index: 50;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
 .in-game__scorecard-name-total, .in-game__scorecard-multiplier-name {
-  padding-block: 1.75rem;
+  height: 5rem;
+  text-align: center;
+  padding-block-start: 1.5rem;
+}
+.in-game__scorecard-net-container {
+  border-right: 1px solid black;
 }
 
 .in-game__scorecard-multiplied-container, .in-game__scorecard-net-container {
@@ -753,8 +752,16 @@ input:checked + .slider:before {
   align-items: center;
 }
 
-.in-game__scorecard-number-total {
-  text-align: center;
+/* backdrop */
+
+.in-game__backdrop {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* round summary */
